objects/FieloEE__Category__c.object
<CustomObject>
    <description>Categories you create for hierarchically ordering rewards and content feeds.</description>
    <fields>
        <fullName>FieloEE__AttachmentId__c</fullName>
        <description>This allows to add an image to the Category</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Category_Group_Name__c</fullName>
        <formula>FieloEE__Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Category name</description>
        <label>Category</label>
        <referenceTo>FieloEE__Category__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Order__c</fullName>
        <description>Sort the categories</description>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Category</relationshipLabel>
        <relationshipName>Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>FieloEE__All</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Category__c</columns>
        <columns>FieloEE__Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__All_Categories</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Order__c</columns>
        <columns>FieloEE__Category_Group_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Categories</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category</pluralLabel>
    <recordTypes>
        <fullName>FieloEE__CategoryItem</fullName>
        <active>true</active>
        <label>Category Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Category_Group</fullName>
        <active>true</active>
        <description>Element that represent a set of categories</description>
        <label>Category Group</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>